# opendocgen

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.gpu  LICENSE  Makefile  README.md  dockerignore  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml  release.yml
docker/: VERSIONS.md  docker-compose.dev.yml  docker-compose.gpu.yml  docker-compose.yml
docker/browserless/: Dockerfile
docker/ollama/: Dockerfile  Dockerfile.gpu
docker/searxng/: Dockerfile  settings.yml
frontend/: index.html  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.complex.tsx  App.tsx  index.css
frontend/src/components/: Sidebar.tsx
frontend/src/pages/: Dashboard.tsx  DocumentGenerator.tsx  FileManager.tsx  TaskManager.tsx
frontend/src/services/: api.ts
scripts/: dev-start.bat  dev-start.sh  download_models.bat  download_models.sh  health_check.bat  health_check.sh  setup.bat  setup.sh
src/: __init__.py  cli.py  config.py  main.py
src/agents/: __init__.py  analysis_agent.py  base_agent.py  code_agent.py  research_agent.py  reviewer_agent.py  writer_agent.py
src/api/: server.py
src/api/routes/: agents.py  documents.py  files.py  health.py  tasks.py
src/core/: orchestrator.py
src/llm/: __init__.py  ollama_manager.py
src/models/: __init__.py  agent_config.py  document.py  task.py
src/templates/: business_report.md  proposal.md  research_paper.md  technical_doc.md
src/tools/: __init__.py
src/tools/analysis_tools/: code_executor.py  code_generator.py  data_visualizer.py  statistical_tools.py
src/tools/document_tools/: local_parser.py  template_manager.py  unstructured_parser.py
src/tools/utility_tools/: file_manager.py  text_processors.py
src/tools/web_tools/: __init__.py  browserless_scrape.py  download_manager.py  searxng_search.py
src/utils/: logger.py
src/workflows/: __init__.py  research_workflow.py
